syntax = "proto3";

package menu;

service MenuService {
  rpc CreateMenu(CreateMenuRequest) returns (Menu) {}
  rpc UpdateMenu(Menu) returns (Menu) {}
  rpc DeleteMenu(MenuRequestId) returns (Menu) {}
  rpc GetMenu(MenuRequestId) returns (Menu) {}
  rpc GetMenus(GetMenusRequest) returns (GetMenusResponse) {}
  rpc GetMenusByBistro(GetMenusByBistroRequest) returns (GetMenusResponse) {}
}

message Menu {
 string id = 1;
 string name = 2;
 string image = 3;
 string description = 4;
 string bistroId = 5;
 int32 price = 6;
}

message MenuRequestId {
  string id = 1;
}

message GetMenusRequest {
  int32 page = 1;
  int32 limit = 2;
}

message Meta {
  int32 totalItems = 1;
  int32 itemCount = 2;
  int32 itemsPerPage = 3;
  int32 totalPages = 4;
  int32 currentPage = 5;
}

message GetMenusByBistroRequest {
  string bistroId = 1;
  Meta meta = 2;
}

message GetMenusResponse {
  repeated Menu items = 1;
  GetMenusRequest meta = 2;
}

message CreateMenuRequest {
  string name = 1;
  string image = 2;
  string description = 3;
  string bistroId = 4;
  int32 price = 5;
}

message UpdateMenu {
  string id = 1;
  string name = 2;
  string image = 3;
  string description = 4;
  string bistroId = 5;
  int32 price = 6;
}